--- a/client/src/components/styles/detail.module.css
+++ b/client/src/components/styles/detail.module.css
@@ -46,12 +46,7 @@
 }
 
 body {
-    background-color: lightyellow;
-}
-
-.piK {
-    align-content: center;
-    border-radius: 80%;
+    background-color:mintcream;
 }
 
 .resume {
