--- a/client/src/components/styles/recipecreator.module.css
+++ b/client/src/components/styles/recipecreator.module.css
@@ -1,19 +1,3 @@
-/* .formframe {
-    width: 500px;
-    height: 70%;
-    background-color: aliceblue;
-    border: 3.5px double midnightblue;
-    font-family: monospace;
-    font-size: medium;
-    color: midnightblue;
-    margin: 8px;
-    padding: 5px;
-    position: absolute;
-    top: 30px;
-    left: 250px;
-    animation: rollOut 2s ease-in-out alternate-reverse infinite;
-} */
-
 .n {
     font-size: 15px;
     font-family: monospace;
@@ -39,7 +23,7 @@
     position: absolute;
     font-weight: bolder;
     left: 3px;
-    top: 50px;
+    top: 75px;
     width: 35%;
 }
 
@@ -57,7 +41,7 @@
     font-weight: bolder;
     position: absolute;
     left: 3px;
-    top: 100px;
+    top: 150px;
     width: 35%;
 }
 
@@ -75,7 +59,7 @@
     font-weight: bolder;
     position: absolute;
     left: 3px;
-    top: 150px;
+    top: 225px;
     width: 35%;
 }
 
@@ -93,7 +77,7 @@
     font-weight: bolder;
     position: absolute;
     left: 3px;
-    top: 200px;
+    top: 300px;
     width: 35%;
 }
 
@@ -111,7 +95,7 @@
     font-weight: bolder;
     position: absolute;
     left: 3px;
-    top: 250px;
+    top: 375px;
     width: 35%;
 }
 
@@ -128,12 +112,12 @@
     font-size: larger;
     font-weight: bolder;
     color: midnightblue;
-    border: 3.5px double midnightblue;
+    border: 2.5px double midnightblue;
     background-color: lavender;
     position: absolute;
     animation: shake 2s alternate-reverse ease-in-out infinite;
     width: 35%;
-    bottom: 15px;
+    bottom: 5px;
     right: 180px;
 }
 
@@ -153,7 +137,7 @@
     position: absolute;
     right: 5px;
     top: 3px;
-    height: 75%;
+    height: 55%;
     width: 50%;
     border: double midnightblue
 }
@@ -241,7 +225,7 @@
 
 .formframe {
     width: 500px;
-    height: 50%;
+    height: 70%;
     background-color: lightsteelblue;
     border: 8px double midnightblue;
     font-family: monospace;
@@ -311,4 +295,17 @@
     width: 33%;
     opacity: 90%;
     border: outset 7.5px;
+}
+
+.err{
+    position: absolute;
+    top: 25px;
+    left: 2px;
+    color: red;
+}
+.err2{
+    position: absolute;
+    top: 25px;
+    left: 1px;
+    color: red;
 }
